--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "less": "^2.7.2",
     "less-loader": "^4.0.3",
     "node-sass": "^4.5.2",
-    "react-hot-loader": "^3.0.0-beta.6",
+    "react-hot-loader": "^3.1.3",
     "sass-loader": "^6.0.3",
     "style-loader": "^0.16.1",
     "webpack": "^2.4.1",
