--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "ecos-ui",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
+    "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "NODE_ENV=development node dev-server.js",
     "build": "rm -rf ./dist/* && NODE_ENV=production webpack --config webpack/webpack.prod.js --context ./webpack/"
@@ -19,6 +20,7 @@
     "install": "^0.10.2",
     "lodash": "^4.17.4",
     "npm": "^5.6.0",
+    "rancher-api-store": "git+https://github.com/biblesyme/rancher-api-store.git#master",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.4",
