Fix rancher-api-store no builded in product envoriment

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "install": "^0.10.2",
     "lodash": "^4.17.4",
     "npm": "^5.6.0",
-    "rancher-api-store": "git+https://github.com/biblesyme/rancher-api-store.git#master",
+    "rancher-api-store": "0.0.12",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.4",
