Add makefile for UI
make build -> npm run dev
make package -> build and docker build in package

--- a/package/Dockerfile
+++ b/package/Dockerfile
@@ -1,3 +1,9 @@
-FROM nginx:1.12
+FROM nginx
+RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 COPY dist /usr/share/nginx/html/
+ADD default.conf /tmp
+ADD startup.sh /
+ENV BACKEND_IP=127.0.0.1 BACKEND_PORT=60080
 EXPOSE 80
+ENTRYPOINT [ "/bin/bash","/startup.sh" ]
+CMD [ "nginx","-g","daemon off;" ]
