--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rancher-api-store-haier": "^0.1.0",
     "rc-progress": "^2.2.5",
     "rc-table": "^6.1.7",
+    "rc-tabs": "^9.2.4",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.4",
