--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bizcharts": "^3.1.0",
     "install": "^0.10.2",
     "lodash": "^4.17.4",
+    "moment": "^2.21.0",
     "npm": "^5.6.0",
     "rancher-api-store-haier": "^0.1.0",
     "rc-progress": "^2.2.5",
