--- a/package/default.conf
+++ b/package/default.conf
@@ -7,6 +7,12 @@ server {
         root   /usr/share/nginx/html;
     }
 
+    location / {
+        try_files $uri $uri/ @router;
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
+
     location /v1/ {
        proxy_pass   http://${{BACKEND_IP}}:${{BACKEND_PORT}};
        proxy_set_header   Host             $host;
@@ -14,18 +20,7 @@ server {
        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
        proxy_next_upstream error timeout invalid_header http_500 http_502 http_503 http_504;
     }
-    
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-
-    location ~ (.*)\.(jpg|png|css|js|html)$ {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
-
-    location ~/(.*)$ {
-        rewrite ^(.*)$ /index.html;
+    location @router {
+        rewrite ^.*$ /index.html last;
     }
 }
